# model/user_basic.go
@@ -11,8 +11,8 @@ type UserBasic struct {
 	gorm.Model
 	Name          string
 	Password      string
-	Phone         string
-	Email         string
+	Phone         string `valid:"matches(^1[3-9]{1}\\d{9}$)"`
+	Email         string `valid:"email"`
 	Identity      string
 	ClientIP      string
 	ClientPort    string
@@ -35,4 +35,22 @@ func GetUserList() []*UserBasic {
 		fmt.Println(v)
 	}
 	return data
+}
+
+func CreateUser(user UserBasic) *gorm.DB {
+	return util.DB.Create(&user)
+}
+
+func DeleteUser(user UserBasic) *gorm.DB {
+	return util.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return util.DB.Model(&user).Updates(
+		UserBasic{
+			Name:     user.Name,
+			Password: user.Password,
+			Phone:    user.Phone,
+			Email:    user.Email,
+		})
 }
